# DataAgentConnector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/agents/: annotation_agents.py  config.py  data_agent.py
app/agents/prompts/: annotation_prompts.py  data_agent_prompt.py
app/core/: config.py  db_registry.py  logging.py
app/db/: lance_db.py  sql_alchemy.py
app/domain/: embed.py  extract_colum_content.py  fk_analyzer.py
app/interfaces/api/: main.py
app/interfaces/api/routes/: openbb_widgets.py
app/interfaces/mcp/: main.py
app/mcp/: main.py
app/models/: agents.py  database_registry.py  indexing.py  lance.py
app/presentation/api/: main.py
app/presentation/api/routes/: openbb_widgets.py  widget_registry.py
app/presentation/mcp/: main.py
app/repositories/: annotations.py  column_contents.py  fk_metadata.py  lance_db.py  sql_db.py
app/schemas/: agents.py  config.py
app/services/: annotation_service.py  fk_analyzer.py  indexing_service.py  search_service.py  startup_service.py
app/services/annotate/: annotation_store.py  table_annotation.py
app/services/indexing/: content_fts_indexer.py  embed.py  extract_colum_content.py  search.py
