[project]
name = "data-agent-stack"
version = "0.1.0"
description = "A blue print for building data agents that can connect to any SQL database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lancedb>=0.25.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pyodbc>=5.2.0",
    "orjson>=3.10.7",
    "rich>=14.1.0",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
ai = [
    "pydantic-ai-slim[openai]>=1.0.17",
    "sentence-transformers>=5.1.1",
]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]
mcp = [
    "fastmcp>=2.12.4",
]
rest = [
    "fastapi[standard]>=0.118.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true